Picture and text showing

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="BigPicture">
         <img id="Photo">
         <div class="GrayContainer">
-          <h1 id="PhotoTitle">Címe</h1>
-          <p id="PhotoDescription">Leírása</p>
+          <h1 id="PhotoTitle"></h1>
+          <p id="PhotoDescription"></p>
         </div>
         </div> <!-- Ez a nagy kép a képernyő közepén -->
         <div class="Panel" id="RightPanel">
