InitThumbnails fills the html code with data (div+img tags)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       </div>
     <!-- Ez a felső nagy képnézegető vége -->
     <div id="BottomArea">
-      <div class="Thumbnail"></div>
+      <!--
+      <div class="Thumbnail">
+        <img class="ThumbnailPhoto">
+      </div> Itt egy Thumbnail elem, ezeket fogja a javascript inicializáláskor beszúrni -->
       </div>
     </div>
     <!-- Ez a MainBox vége -->
