--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <div class="BigPicture">
         <img id="Photo">
+        <img id="TransitionPhoto">
         <div class="GrayContainer">
           <h1 id="PhotoTitle"></h1>
           <p id="PhotoDescription"></p>
