Basic stuff done, working version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div id="MainContent">
-    <div id="MainBox"> <!-- A nagy fehér doboz, a fő content -->
+    <div id="MainBox"> <!-- The big white Box -->
       <div class="Panel" id="LeftPanel">
         <div class="Arrow" id="LeftArrow"><img src="images/arrow.svg" alt=""></div>
       </div>
@@ -25,22 +25,22 @@
           <h1 id="PhotoTitle"></h1>
           <p id="PhotoDescription"></p>
         </div>
-        </div> <!-- Ez a nagy kép a képernyő közepén -->
+        </div> <!-- This is the picture  -->
         <div class="Panel" id="RightPanel">
           <div class="Arrow" id="RightArrow"><img src="images/arrow.svg" alt=""></div> <!-- Jobbra lapozó nyíl -->
         </div>
       </div>
-    <!-- Ez a felső nagy képnézegető vége -->
+    <!-- End of the upper region -->
     <div id="BottomArea">
       <!--
       <div class="Thumbnail">
         <img class="ThumbnailPhoto">
-      </div> Itt egy Thumbnail elem, ezeket fogja a javascript inicializáláskor beszúrni -->
+      </div> we will use JavaScript to init theese stuff -->
       </div>
     </div>
-    <!-- Ez a MainBox vége -->
+    <!-- End of the Main Box -->
   </div>
-  <!-- Ez a MainContent vége -->
+  <!-- End of the Main Content -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 </body>
